Fix modal widths, start working on mobile builder styling

--- a/components/builder/SearchResultBox.module.css
+++ b/components/builder/SearchResultBox.module.css
@@ -3,9 +3,15 @@
   overflow-x: auto;
   overflow-y: hidden;
   display: flex;
-  height: 195px;
+  height: 100px;
   width: 100%;
   background: rgba(255, 255, 255, 1);
   box-shadow: 0 1px 10px 0 rgba(120, 120, 120, 0.3);
   border-radius: 20px;
+}
+
+@media only screen and (min-width: 680px) {
+  .container {
+    height: 195px;
+  }
 }
